<resources>
    <string name="app_name">facebook</string>
    <string name="from">from</string>
    <string name="phone_or_email">Phone or email</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="forget_password">Forgot Password?</string>
    <string name="or">OR</string>
    <string name="create_new_facebook_account">Create New Facebook Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enterName">Enter Name or Phone or Email</string>
    <string name="enterPassword">Enter Password</string>
    <string name="welcome">Welcome</string>
    <string name="user_name">User Name </string>
    <string name="Post_time">Post Time</string>
    <string name="Text_Post">Text Post</string>
    <string name="like">Like</string>
    <string name="comment">Comment</string>
    <string name="share">Share</string>
    <string name="signup">SIGN UP</string>
    <string name="user_name_new_account">User Name / Email</string>
    <string name="mutual_friend">mutual friend</string>
    <string name="request_user_name">request user name</string>
    <string name="confirm">Confirm</string>
    <string name="delete">Delete</string>
    <string name="friends">Friends</string>
    <string name="suggestions">Suggestions</string>
    <string name="your_friends">Your Friends</string>
    <string name="friend_requests">Friend Requests</string>
    <string name="user_name1">User Name</string>
    <string name="request_time">1m</string>
    <string name="see_all">See all</string>
    <string name="marketPlace">Marketplace</string>
    <string name="selling">Selling</string>
    <string name="categories">Categories</string>
    <string name="today_picks">Today\'s Picks</string>
    <string name="beni_suef">Beni Suef</string>
    <string name="memory">We hope you enjoy looking back and sharing your memories Facebook,from the most recent to those long age</string>
    <string name="memories">Memories</string>
    <string name="create_new_post">Create new post</string>
    <string name="what">What\'s on your mind?</string>
    <string name="check_in">Check In</string>
    <string name="photo">Photo</string>
    <string name="menu">Menu</string>
    <string name="mai_saad">Mai Saad</string>
    <string name="see_your_profile">See your profile</string>
    <string name="all_shortcuts">All shortcuts</string>
    <string name="saved">Saved</string>
    <string name="find_friends">Find friends</string>
    <string name="pages">Pages</string>
    <string name="events">Events</string>
    <string name="feeds">Feeds</string>
    <string name="videos_on_watch">Videos on Watch</string>
    <string name="reels">Reels</string>
    <string name="see_more">See more</string>
    <string name="messenger">Messenger</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
</resources>