<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#222222"
    android:layout_marginBottom="@dimen/_9sdp"
    xmlns:tools="http://schemas.android.com/tools">
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/request_profile_img"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_80sdp"
        tools:src="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.022"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.066"/>
    <TextView
        android:id="@+id/request_profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/request_user_name"
        android:textColor="@color/white"
        android:textSize="@dimen/_17sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.087"
        app:layout_constraintStart_toEndOf="@+id/request_profile_img"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.072"/>

    <TextView
        android:id="@+id/mutual_friend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mutual_friend"
        android:textColor="#87878787"
        android:textSize="@dimen/_12sdp"
        android:layout_marginStart="@dimen/_10sdp"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toEndOf="@+id/request_profile_img"
        app:layout_constraintTop_toBottomOf="@+id/request_profile_name"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/timeRequest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="20dp"
        android:text="@string/request_time"
        android:textColor="#605F5F"
        app:layout_constraintBottom_toTopOf="@id/delete_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.691"
        app:layout_constraintStart_toEndOf="@id/request_profile_name" />

    <Button
        android:id="@+id/confirm_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#3360FF"
        android:text="@string/confirm"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.398"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mutual_friend" />

    <Button
        android:id="@+id/delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#464647"
        android:text="@string/delete"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.585"
        app:layout_constraintStart_toStartOf="@id/confirm_button"
        app:layout_constraintTop_toBottomOf="@id/mutual_friend" />

</androidx.constraintlayout.widget.ConstraintLayout>