<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#222222"
    tools:context=".ui.fragment.MenuFragment">

    <TextView
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu"
        android:textSize="@dimen/_20sdp"
        android:textStyle="bold"
        android:padding="@dimen/_5sdp"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_baseline_search_24"
        app:iconTint="@color/white"
        app:iconGravity="end"
        app:iconSize="@dimen/_25sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_baseline_settings_24"
        app:iconTint="@color/white"
        app:iconGravity="end"
        app:iconSize="@dimen/_25sdp"
       app:layout_constraintEnd_toStartOf="@id/search"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_img"
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_60sdp"
        android:src="@drawable/memories"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.022"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/menu"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintVertical_bias="0.066"/>

    <TextView
        android:id="@+id/profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mai_saad"
        android:textColor="@color/white"
        android:textSize="@dimen/_17sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.117"
        app:layout_constraintStart_toEndOf="@+id/profile_img"
        app:layout_constraintTop_toTopOf="@id/menu"
        app:layout_constraintVertical_bias="0.091" />

    <TextView
        android:id="@+id/see"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/see_your_profile"
        android:textColor="@color/white"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.141"
        app:layout_constraintStart_toEndOf="@+id/profile_img"
        app:layout_constraintTop_toTopOf="@id/profile_name"
        app:layout_constraintVertical_bias="0.065" />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        app:layout_constraintTop_toBottomOf="@id/see"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="#bebebe"
        android:layout_marginBottom="@dimen/_10sdp"/>

    <TextView
        android:id="@+id/all_shortcuts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/line"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/all_shortcuts"
        android:textColor="@color/white"
        android:textSize="@dimen/_16sdp"
        android:padding="@dimen/_5sdp"
        android:layout_marginStart="8dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/saved"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="#464647"
        android:text="@string/saved"
        android:textColor="@color/white"
        android:layout_marginStart="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/all_shortcuts"
        app:icon="@drawable/ic_baseline_save_24"
        app:iconGravity="top"
        app:iconSize="@dimen/_25sdp"
        app:iconTint="@color/purple_500"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/memories"
        android:layout_width="@dimen/_155sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="5dp"
        android:backgroundTint="#464647"
        android:text="@string/memories"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.902"
        app:layout_constraintStart_toStartOf="parent"
        app:icon="@drawable/ic_baseline_memories_24"
        app:iconTint="#1544EA"
        app:iconGravity="top"
        app:iconSize="@dimen/_25sdp"
        app:layout_constraintTop_toBottomOf="@id/all_shortcuts" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/communities"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="72dp"
        android:backgroundTint="#464647"
        android:text="@string/memories"
        android:textColor="@color/white"
        app:layout_constraintHorizontal_bias="0.902"
        app:layout_constraintStart_toStartOf="parent"
        app:icon="@drawable/ic_baseline_groups_24"
        app:iconTint="#1544EA"
        app:iconGravity="top"
        app:iconSize="@dimen/_25sdp"
        app:layout_constraintTop_toBottomOf="@id/saved"
        android:layout_marginStart="5dp"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/find_friends"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="72dp"
        android:backgroundTint="#464647"
        android:text="@string/find_friends"
        android:textColor="@color/white"
        app:layout_constraintHorizontal_bias="0.902"
        app:layout_constraintStart_toStartOf="parent"
        app:icon="@drawable/ic_baseline_person_24"
        app:iconTint="#1544EA"
        app:iconGravity="top"
        app:iconSize="@dimen/_25sdp"
        app:layout_constraintTop_toBottomOf="@id/communities"
        android:layout_marginStart="5dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/pages"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#464647"
        android:text="@string/pages"
        android:textColor="@color/white"
        app:icon="@drawable/ic_baseline_flag_24"
        app:iconGravity="top"
        app:iconSize="@dimen/_25sdp"
        app:iconTint="#F6780B"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/find_friends" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/events"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="#464647"
        android:text="@string/events"
        android:textColor="@color/white"
        app:layout_constraintHorizontal_bias="0.902"
        app:layout_constraintStart_toStartOf="parent"
        app:icon="@drawable/ic_baseline_event_repeat_24"
        app:iconTint="#EF0635"
        app:iconGravity="top"
        app:iconSize="@dimen/_25sdp"
        app:layout_constraintTop_toBottomOf="@id/pages"
        android:layout_marginStart="5dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/feeds"
        android:layout_width="@dimen/_155sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="5dp"
        android:backgroundTint="#464647"
        android:text="@string/feeds"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.902"
        app:layout_constraintStart_toStartOf="parent"
        app:icon="@drawable/ic_baseline_feedback_24"
        app:iconTint="#1544EA"
        app:iconGravity="top"
        app:iconSize="@dimen/_25sdp"
        app:layout_constraintTop_toBottomOf="@id/memories" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/videos_on_watch"
        android:layout_width="@dimen/_155sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="5dp"
        android:backgroundTint="#464647"
        android:text="@string/videos_on_watch"
        android:textColor="@color/white"
        app:icon="@drawable/ic_baseline_video_24"
        app:iconGravity="top"
        app:iconSize="@dimen/_25sdp"
        app:iconTint="#1544EA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.906"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/feeds" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/marketPlace"
        android:layout_width="@dimen/_155sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="5dp"
        android:backgroundTint="#464647"
        android:text="@string/marketPlace"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.902"
        app:layout_constraintStart_toStartOf="parent"
        app:icon="@drawable/ic_baseline_market_place_24"
        app:iconTint="#1544EA"
        app:iconGravity="top"
        app:iconSize="@dimen/_25sdp"
        app:layout_constraintTop_toBottomOf="@id/videos_on_watch" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/reels"
        android:layout_width="@dimen/_155sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="5dp"
        android:backgroundTint="#464647"
        android:text="@string/reels"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.902"
        app:layout_constraintStart_toStartOf="parent"
        app:icon="@drawable/ic_baseline_video_settings_24"
        app:iconTint="#F6780B"
        app:iconGravity="top"
        app:iconSize="@dimen/_25sdp"
        app:layout_constraintTop_toBottomOf="@id/marketPlace" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/see_more"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:backgroundTint="#464647"
        android:text="@string/see_more"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reels" />


</androidx.constraintlayout.widget.ConstraintLayout>